Fixed blog teaser width on mobile
Former-commit-id: fa4c08d3c7d9963b091f998bc626d18b394caae5

--- a/wp-content/themes/epik/assets/sass/pages/_blog.scss
+++ b/wp-content/themes/epik/assets/sass/pages/_blog.scss
@@ -7,6 +7,10 @@
 	.entry {
 		@include padding(1em 1em 0);
 		background-color: $white;
+
+		@include media($xlarge-screen-up) {
+			width: 100%;
+		}
 	}
 
 	.entry-meta {
