--- a/wp-content/themes/epik/style.css
+++ b/wp-content/themes/epik/style.css
@@ -3173,6 +3173,9 @@ body.woocommerce div.woocommerce-message div.wrap {
   .blog .entry {
     padding: 1em 1em 0;
     background-color: white; }
+    @media screen and (max-width: 1023px) {
+      .blog .entry {
+        width: 100%; } }
   .blog .entry-meta {
     margin: 0; }
   .blog .entry-categories {
